--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,26 @@
 {
   "files.associations": {
     "time.h": "c",
-    "string.h": "c"
+    "string.h": "c",
+    "stdio.h": "c",
+    "array": "c",
+    "*.tcc": "c",
+    "string": "c",
+    "unordered_map": "c",
+    "unordered_set": "c",
+    "memory": "c",
+    "optional": "c",
+    "string_view": "c",
+    "fstream": "c",
+    "future": "c",
+    "istream": "c",
+    "ostream": "c",
+    "sstream": "c",
+    "stop_token": "c",
+    "streambuf": "c",
+    "thread": "c",
+    "functional": "c",
+    "tuple": "c",
+    "variant": "c"
   }
 }
