--- a/.vscode/.gitignore
+++ b/.vscode/.gitignore
@@ -47,6 +47,7 @@
 *.cmd
 .tmp_versions/
 modules.order
+tempCodeRunnerFile.c
 Module.symvers
 Mkfile.old
 dkms.conf
@@ -54,4 +55,3 @@ dkms.conf
 *.vscode
 *.md
 !*.*
-*tempCodeRunnerFile.c
